--- a/style.css
+++ b/style.css
@@ -16,7 +16,8 @@
 }
 
 body {
-    background-image: linear-gradient(rgba(62, 20, 20, 0.4), rgba(62, 20, 20, 0.4)), url(back.jpg);
+    background-color: aliceblue;
+    
     background-size: cover;
     background-position: center;
     font-family: Lato;
@@ -32,7 +33,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: rgb(34, 200, 159);
+    background-color: slategray;
     box-shadow: 0px 10px 50px rgba(236, 236, 236, 0.3);
     overflow: hidden;
 }
@@ -70,7 +71,13 @@ body {
     margin-bottom: 130px;
 }
 
-.active { background-color: #000000; }
+.active { background: rgba(28,28,28,1);
+    background: -moz-linear-gradient(45deg, rgba(28,28,28,1) 0%, rgba(33,33,33,1) 12%, rgba(38,38,38,1) 25%, rgba(26,26,26,1) 39%, rgba(15,15,15,1) 50%, rgba(0,0,0,1) 51%, rgba(8,8,8,1) 60%, rgba(15,15,15,1) 76%, rgba(10,10,10,1) 91%, rgba(8,8,8,1) 100%);
+    background: -webkit-gradient(left bottom, right top, color-stop(0%, rgba(28,28,28,1)), color-stop(12%, rgba(33,33,33,1)), color-stop(25%, rgba(38,38,38,1)), color-stop(39%, rgba(26,26,26,1)), color-stop(50%, rgba(15,15,15,1)), color-stop(51%, rgba(0,0,0,1)), color-stop(60%, rgba(8,8,8,1)), color-stop(76%, rgba(15,15,15,1)), color-stop(91%, rgba(10,10,10,1)), color-stop(100%, rgba(8,8,8,1)));
+    background: -webkit-linear-gradient(45deg, rgba(28,28,28,1) 0%, rgba(33,33,33,1) 12%, rgba(38,38,38,1) 25%, rgba(26,26,26,1) 39%, rgba(15,15,15,1) 50%, rgba(0,0,0,1) 51%, rgba(8,8,8,1) 60%, rgba(15,15,15,1) 76%, rgba(10,10,10,1) 91%, rgba(8,8,8,1) 100%);
+    background: -o-linear-gradient(45deg, rgba(28,28,28,1) 0%, rgba(33,33,33,1) 12%, rgba(38,38,38,1) 25%, rgba(26,26,26,1) 39%, rgba(15,15,15,1) 50%, rgba(0,0,0,1) 51%, rgba(8,8,8,1) 60%, rgba(15,15,15,1) 76%, rgba(10,10,10,1) 91%, rgba(8,8,8,1) 100%);
+    background: -ms-linear-gradient(45deg, rgba(28,28,28,1) 0%, rgba(33,33,33,1) 12%, rgba(38,38,38,1) 25%, rgba(26,26,26,1) 39%, rgba(15,15,15,1) 50%, rgba(0,0,0,1) 51%, rgba(8,8,8,1) 60%, rgba(15,15,15,1) 76%, rgba(10,10,10,1) 91%, rgba(8,8,8,1) 100%);
+    background: linear-gradient(45deg, rgba(28,28,28,1) 0%, rgba(33,33,33,1) 12%, rgba(38,38,38,1) 25%, rgba(26,26,26,1) 39%, rgba(15,15,15,1) 50%, rgba(0,0,0,1) 51%, rgba(8,8,8,1) 60%, rgba(15,15,15,1) 76%, rgba(10,10,10,1) 91%, rgba(8,8,8,1) 100%); }
 .active .player-name { font-weight: 300; }
 
 .active .player-name::after {
@@ -84,21 +91,31 @@ body {
 }
 
 .player-current-box {
-    background-color: rgb(100, 98, 98);
-    color: rgb(255, 255, 255);
-    width: 40%;
+    background-color: rgb(164, 214, 0);
+    color: rgb(0, 0, 0);
+    width: 58%;
     margin: 0 auto;
-    padding: 12px;
+    padding: 29px;
+    font-weight: 700;
+    font-size: 19px;
     text-align: center;
-    border: 1px solid rgb(114, 114, 114);
-    border-radius: 15px;
+
+    border-radius: 200px 0px 200px 0px;
+-moz-border-radius: 200px 0px 200px 0px;
+-webkit-border-radius: 200px 0px 200px 0px;
+
+border: 1px solid #9cb800;
+
+-webkit-box-shadow: 11px 2px 30px #000000;
+-moz-box-shadow: 11px 2px 30px #000000;
+box-shadow: 11px 2px 30px #000000;
 }
 
 .player-current-label {
     text-transform: uppercase;
     margin-bottom: 10px;
     font-size: 12px;
-    color: rgb(233, 233, 233);
+    color: rgb(0, 0, 0);
 }
 
 .player-current-score {
