--- a/style.css
+++ b/style.css
@@ -138,8 +138,8 @@ button {
     transition: background-color 0.3s, color 0.3s;
 }
 
-button:hover { font-weight: 600; }
-button:hover i { margin-right: 20px; }
+button:hover { font-weight: 600; color: rgb(164, 214, 0); }
+button:hover i { margin-right: 20px; color: rgb(133, 173, 2); }
 
 button:focus {
     outline: none;
